<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/tulipy" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/questionsAll">

        <TextView
            android:id="@+id/pytania"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pytania? Wątpliwości? Życzenia? "
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="12sp"
            android:textColor="#e06"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pomysły? Rady małżeńskie? Smutki?"
            android:textSize="12sp"
            android:textColor="#e06"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/pytania"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Skontaktuj się z nami!"
            android:textSize="30sp"
            android:textColor="#e06"
            android:id="@+id/textView"
            android:layout_below="@+id/pytania"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/zadzwon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_us"
                android:textSize="25sp"
                android:textColor="#35f"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/asiniTel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/asini"-->
                    <!--android:scaleX="0.8"-->
                    <!--android:scaleY="0.8"-->
                    <!--android:id="@+id/asiniTel"-->
                    <!--android:layout_alignParentTop="true"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_alignParentEnd="true" />-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/bridePhone"
                    android:layout_centerHorizontal="true"
                    android:text="@string/bride_name"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/bridePhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bride_phone"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_phone"
                    android:id="@+id/leftTel"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </LinearLayout>

            <RelativeLayout

                android:id="@+id/rafiniTel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/groomPhone"
                    android:layout_centerHorizontal="true"
                    android:text="@string/groom_name"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/groomPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/groom_phone"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_phone"
                    android:id="@+id/rightTel"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />

                <!--<ImageView-->
                    <!--android:id="@+id/rafiniTel"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/rafini"-->
                    <!--android:scaleX="0.8"-->
                    <!--android:scaleY="0.8"-->
                    <!--android:layout_alignParentTop="true"-->
                    <!--android:layout_alignParentLeft="true"-->
                    <!--android:layout_alignParentStart="true" />-->
            </RelativeLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="2"-->
            <!--android:orientation="vertical">-->
            <!--<TextView-->
                <!--android:id="@+id/napisz"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:text="...albo napisz :)"-->
                <!--android:textColor="#35f"-->
                <!--android:textSize="25sp" />-->
        <!--</RelativeLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="4"-->
            <!--android:orientation="horizontal">-->
            <!--<LinearLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1">-->
            <!--</LinearLayout>-->
            <!--<RelativeLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="3">-->
                <!--<ImageView-->
                    <!--android:id="@+id/asiniMail"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:scaleX="0.8"-->
                    <!--android:scaleY="0.8"-->
                    <!--android:src="@drawable/asini"-->
                    <!--android:layout_alignParentTop="true"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_alignParentEnd="true" />-->

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@mipmap/ic_mail_red"-->
                    <!--android:id="@+id/leftMail"-->
                    <!--android:layout_alignParentBottom="true"-->
                    <!--android:layout_alignParentLeft="true"-->
                    <!--android:layout_alignParentStart="true" />-->
            <!--</RelativeLayout>-->
            <!--<LinearLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1">-->
            <!--</LinearLayout>-->
            <!--<RelativeLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="3">-->

                <!--<ImageView-->
                    <!--android:id="@+id/rafiniMail"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:scaleX="0.8"-->
                    <!--android:scaleY="0.8"-->
                    <!--android:src="@drawable/rafini"-->
                    <!--android:layout_alignParentTop="true"-->
                    <!--android:layout_alignParentLeft="true"-->
                    <!--android:layout_alignParentStart="true" />-->

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@mipmap/ic_mail_red"-->
                    <!--android:id="@+id/rightMail"-->
                    <!--android:layout_alignParentBottom="true"-->
                    <!--android:layout_alignParentLeft="true"-->
                    <!--android:layout_alignParentStart="true" />-->
            <!--</RelativeLayout>-->
            <!--<LinearLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1">-->
            <!--</LinearLayout>-->
        <!--</LinearLayout>-->
    </LinearLayout>
</LinearLayout>

</RelativeLayout>
